--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
                         </div>
                     </div>
 
+                    <h1>IT IS MY CV</h1>
+                    <div>
+                        <img class="contact-info__avatar" src="assets/cv_01.png" alt="Avatar">
+                    </div>
+
                     <div class="contact-info__block contact-info__block--center">
                         <img class="contact-info__avatar" src="assets/avatar.png" alt="Avatar">
                     </div>
